# open-smart-batt

./: .gitignore  CLEANROOM.md  CONTRIBUTING.md  COPYRIGHT.md  LICENSE  README.en.md  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml  pages.yml  release.yml
app/: README.md  pyproject.toml
app/rce_batt/: __init__.py  cli.py  client.py  protocol.py
app_flutter/: .gitignore  .metadata  README.md  pubspec.yaml
app_flutter/android/app/: build.gradle.kts
app_flutter/integration_test/: app_test.dart
app_flutter/ios/: ExportOptions.plist  Podfile
app_flutter/ios/Runner/: Info.plist  PrivacyInfo.xcprivacy
app_flutter/ios/Runner.xcodeproj/: project.pbxproj
app_flutter/lib/: main.dart
app_flutter/lib/ble/: ble.dart  ble_models.dart  ble_service.dart
app_flutter/lib/data/: app_database.dart  data.dart  device_repo.dart  history_repo.dart  log_repo.dart  settings_repo.dart  update_service.dart
app_flutter/lib/l10n/: app_en.arb  app_localizations.dart  app_localizations_en.dart  app_localizations_zh.dart  app_zh.arb
app_flutter/lib/models/: app_settings.dart  device_capabilities.dart  log_entry.dart  models.dart  saved_device.dart  telemetry_sample.dart
app_flutter/lib/protocol/: command_builder.dart  frame.dart  gatt.dart  inbound_frame.dart  protocol.dart  selectors.dart  telemetry_decoder.dart
app_flutter/lib/state/: app_services.dart  connection_controller.dart  device_controller.dart  (+3 more)
app_flutter/test/: auth_value_test.dart  data_test.dart  ios_port_test.dart  protocol_test.dart  share_anchor_test.dart  widget_test.dart
docs/: CAPTURE_VERIFIED.md  HCI_CAPTURE_GUIDE.md  PROTOCOL.md  UNVERIFIED.md  VERSIONING.md  i18n-plan.md  ios-qa-checklist.md
mockup/: index.html
site/: index.html  privacy.html
tools/: parse_btsnoop.py
(+21 files in other folders)
