[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "open-smart-batt"
version = "0.1.0"
description = "Community clean-room BLE client for the RCE iBatt smart battery"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "GPL-3.0-or-later" }
authors = [{ name = "OpenSmartBatt contributors" }]
keywords = ["ble", "bluetooth", "battery", "ibatt", "rce", "right-to-repair"]
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3",
    "Operating System :: POSIX :: Linux",
    "Topic :: Communications",
]
dependencies = ["bleak>=0.21"]

[project.urls]
Homepage = "https://github.com/WinePaster/open-smart-batt"

[project.scripts]
rce-batt = "rce_batt.cli:main"

[tool.setuptools]
packages = ["rce_batt"]
